padding top added

--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -24,7 +24,7 @@ body {
         }
         
         body {
-            padding:10px;
+            padding-top:30px;
         }}
     
      /* Add a dark background color with a little bit see-through */
