style changes for mobile

--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -24,7 +24,7 @@ body {
         }
         
         body {
-            padding-top:30px;
+            padding:50px 0px 0px 0px;
         }}
     
      /* Add a dark background color with a little bit see-through */
