--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -1,23 +1,23 @@
 body {
         padding-top: 50px;
     }
-    .container {
+.container {
       padding: 80px 120px;
     }
     
-    .carousel-inner img {
+.carousel-inner img {
       width: 100%; /* Set width to 100% */
       margin: auto;
     }
-    .carousel-caption h3 {
+.carousel-caption h3 {
           color: #000 !important; /* black coloured titles on photos, for white use #fff */
     }
-    @media (max-width: 600px) {
+@media (max-width: 600px) {
     .carousel-caption {
       display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
     }}
    
-    @media (max-width: 400px){
+@media (max-width: 400px){
         .container {
             padding:0;
             margin:0;
@@ -27,8 +27,8 @@ body {
             padding:50px 0px 0px 0px;
         }}
     
-     /* Add a dark background color with a little bit see-through */
-    .navbar {
+/* Add a dark background color with a little bit see-through */
+.navbar {
         font-family: Montserrat, sans-serif;
         margin-bottom: 0;
         /* background-color: #d5d5d5;*/
@@ -38,54 +38,59 @@ body {
         opacity:0.9;
     }
 
-    /* Add a gray color to all navbar links */
-    .navbar li a, .navbar .navbar-brand {
+/* Add a gray color to all navbar links */
+.navbar li a, .navbar .navbar-brand {
         color: #000 !important;
     }
 
-    /* On hover, the links will turn black */
-    .navbar-nav li a:hover {
+/* On hover, the links will turn black */
+.navbar-nav li a:hover {
         color: #008000 !important;
     }
 
-    /* The active link */
-    .navbar-nav li.active a {
+/* The active link */
+.navbar-nav li.active a {
         color: #008 !important;
         background-color:#29292c !important;
     }
 
-    /* Remove border color from the collapsible button */
-    .navbar-default .navbar-toggle {
+/* Remove border color from the collapsible button */
+.navbar-default .navbar-toggle {
         border-color: transparent;
     }
 
-    /* Dropdown */
-    .open .dropdown-toggle {
+/* Dropdown */
+.open .dropdown-toggle {
         color: #fff ;
         background-color: #555 !important;
     }
 
-    /* Dropdown links */
+/* Dropdown links */
     .dropdown-menu li a {
         color: #000 !important;
     }
 
-    /* On hover, the dropdown links will turn red */
+/* On hover, the dropdown links will turn red */
     .dropdown-menu li a:hover {
         background-color: red !important;
     }
 
-    footer {
+footer {
       background-color: #2d2d30;
       color: #f5f5f5;
       padding: 32px;
   }
 
-    footer a {
+footer a {
         color: #f5f5f5;
     }
 
-    footer a:hover {
+footer a:hover {
         color: #777;
         text-decoration: none;
     }
+
+#contact-form #submit-button:active {
+    position:relative;
+    top:1px;
+}
