--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -2,8 +2,8 @@ body {
         padding-top: 50px;
     }
 .container {
-      padding: 80px 120px;
-    }
+    padding: 20px 60px;
+}
     
 .carousel-inner img {
       width: 100%; /* Set width to 100% */
@@ -75,6 +75,18 @@ body {
         background-color: red !important;
     }
 
+/* Remove border and add padding to thumbnails */
+.thumbnail {
+    /*padding: 0 0 15px 0;*/
+    border: none;
+    border-radius: 0;
+}
+
+.thumbnail p {
+    margin-top: 5px;
+}
+
+/* Footer styling */
 footer {
       background-color: #2d2d30;
       color: #f5f5f5;
