--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -1,4 +1,10 @@
+html {
+    position:relative;
+    min-height: 100%;
+}
+
 body {
+    margin: 0 0 50px;
     padding:50px 15px 0px;
     background: url("http://evdekarakteregitimi.com/wp-content/uploads/2014/12/background1.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -100,13 +106,16 @@ body {
     text-align: center;
 }*/
 
-.footer {
-	margin:35px 0px 0px 0px;
-	padding:0px;
-	width:100%;
-	float:left;
-	display:block;
+footer {
+	position:absolute;
+    left: 0;
+    bottom: 0;
+    height: 50px;
+    width:100%;
+    background-color: black;
+    color: white;
     text-align: center;
+    padding:10px;
 }
 footer a {
         color: #f5f5f5;
