--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -90,7 +90,7 @@ body {
 
 /* Remove border and add padding to thumbnails */
 .thumbnail {
-    /*padding: 0 0 15px 0;*/
+    padding: 0;
     border: none;
     border-radius: 0;
 }
@@ -100,11 +100,6 @@ body {
 }
 
 /* Footer styling */
-/*.footer {
-    background-color: #efefef;
-    opacity:0.9;
-    text-align: center;
-}*/
 
 footer {
 	position:absolute;
@@ -115,8 +110,10 @@ footer {
     background-color: #F8F8F8;
     color: black;
     text-align: center;
-    padding:10px;
+    padding:15px;
+    opacity:0.9;
 }
+
 footer a {
         color: #f5f5f5;
     }
