--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -118,3 +118,19 @@ footer a:hover {
 .social { 
     float: right;
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 50%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
