Changed Images to img

--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -14,7 +14,8 @@ body {
     }
 
 .container {
-    padding: 20px 60px;
+    padding: 0px 20px 10px;
+    /*padding: 20px 60px;*/
 }
     
 .carousel-inner img {
