Lime green #32cd32 added to navbar

--- a/css/ks_style.css
+++ b/css/ks_style.css
@@ -62,7 +62,7 @@ body {
 
 /* On hover, the link's background will turn red */
 .navbar-nav li a:hover {
-    background-color: red !important;
+    background-color: #32cd32 !important;
     }
 
 /* Remove border color from the collapsible button */
